--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html>
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body style="color:yellow;background:black;text-align:center;font-size:150%;">
 <H1>Ворота Школы</H1>
 
 <p>Вы стоите у ворот школы, слева от вас таинственный домик а за ним собачья будка.</p>
@@ -5,7 +10,9 @@
 <p>Вы можете пойти:</p>
 
 <ul>
-<li> Ко входу в школу </li>
+<li> Ко <a href="./entrance.html">входу</ в школу </li>
 <li> В спорткомплекс </li>
 <li> К метро и пивнушке </li>
 </ul>
+  </body>
+</html>
