--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>Вы можете пойти:</p>
 
 <ul>
-<li> Ко <a href="./entrance.html">входу</ в школу </li>
+  <li> Ко <a href="./entrance.html">входу</a> в школу </li>
 <li> В спорткомплекс </li>
 <li> К метро и пивнушке </li>
 </ul>
