--- a/corridor_2.html
+++ b/corridor_2.html
@@ -1,8 +1,14 @@
+<!doctype html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body style="color:yellow;background:black;text-align:center;font-size:150%;">
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
+</head>
+
+<body>
+
 <H1>Коридор второго этажа</H1>
 
 <p>Вы вошли в узкий коридор. У вас есть выбор - пойти налево или направо.</p>
@@ -14,5 +20,6 @@
   <li> Направо, в <a href="./SSYLKA.html">спорткомплекс</a>.</li>
   <li> Обратно, на <a href="./SSYLKA.html">лестницу</a>.</li>
 </ul>
-  </body>
+
+</body>
 </html>
