--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
+<!doctype html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body style="color:yellow;background:black;text-align:center;font-size:150%;">
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
+</head>
+
+<body>
 <H1>Ворота Школы</H1>
 
-<p>Вы стоите у ворот школы, слева от вас таинственный домик а за ним собачья будка.</p>
+<p>Вы стоите у ворот школы, слева от вас таинственный домик, позади грязная дорога и большие лужи.</p>
 
 <p>Вы можете пойти:</p>
 
 <ul>
-  <li> Ко <a href="./entrance.html">входу</a> в школу </li>
-<li> В спорткомплекс </li>
-<li> К метро и пивнушке </li>
+  <li> Через калитку, ко <a href="./over_gates.html">входу</a> в школу</li>
+  <li> К <a href="./deadend.html">метро и пивнушке</a>, долой учебу! </li>
 </ul>
-  </body>
+
+</body>
 </html>
