--- a/corridor_2.html
+++ b/corridor_2.html
@@ -18,7 +18,7 @@
 <ul>
   <li> Налево, в <a href="./SSYLKA.html">библиотеку</a>.</li>
   <li> Направо, в <a href="./SSYLKA.html">спорткомплекс</a>.</li>
-  <li> Обратно, на <a href="./SSYLKA.html">лестницу</a>.</li>
+  <li> Обратно, на <a href="./underneathpencil.html">лестницу</a>.</li>
 </ul>
 
 </body>
