--- a/over_gates.html
+++ b/over_gates.html
@@ -6,6 +6,8 @@
   <body>
 <H1>За Воротами</H1>
 
+<img src="./img/school-entrance.jpg"/>
+    
 <p>Вы на внутренней територии школы. Слева от вас таинственный домик а за ним собачья будка.</p>
 
 <p>Вы можете пойти:</p>
