--- a/underneathpencil.html
+++ b/underneathpencil.html
@@ -9,7 +9,9 @@
 
 <body>
 <H1>Подножие карандаша</H1>
-
+  
+<img src="./img/pencil.jpg"/>
+  
 <p>Направо пойдешь-в столовую попадешь</p>
 <p>Налево пойдешь-к шкафчикам придешь</p>
 <p>Наверх пойдешь-счастье потеряешь</p>
