--- a/5floor.html
+++ b/5floor.html
@@ -8,15 +8,18 @@
 </head>
 
 <body>
-<H1>Аятый этаж</H1>
+<H1>Пятый этаж</H1>
 
-<p>Вы стоите у ворот школы, слева от вас таинственный домик, позади грязная дорога и большие лужи.</p>
+<p>Вы нашли тайный путь - попали на пятый этаж! </p>
+  
+<H2> Mission Complete!!!</H2>
 
-<p>Вы можете пойти:</p>
+<p>Вы можете:</p>
 
 <ul>
-  <li> Через калитку, ко <a href="./over_gates.html">входу</a> в школу</li>
-  <li> К <a href="./deadend.html">метро и пивнушке</a>, долой учебу! </li>
+  <li> Пойти на <a href="./stop.html">балкон</a> напрямик</li>
+  <li> Выйти к <a href="./lest5.html">лестнице</a>, на площадку </li>
+  <li> Погулять по <a href="./cor5.html">коридорам</a> </li>
 </ul>
 
 </body>
