--- a/over_gates.html
+++ b/over_gates.html
@@ -13,7 +13,7 @@
 <p>Вы можете пойти:</p>
 
 <ul>
-  <li> Ко <a href="./underneathpencil.html">входу</a> в школу </li>
+  <li> К <a href="./underneathpencil.html">подножию</a> карандаша </li>
 <li> В спорткомплекс </li>
 </ul>
   </body>
