Update and rename biba&boba.html to bibliotheka.html

--- a/bibliotheka.html
+++ b/bibliotheka.html
@@ -15,7 +15,7 @@
 <p>Вы можете пойти:</p>
 
 <ul>
-  <li> Обратно, в <a href="./corridor_2.html">корридор</a>.</li>
+  <li> Обратно, в <a href="./2floor.html">корридор</a>.</li>
 </ul>
 
 Хотите прочесть книгу [тут будет ссылка на рандомную книгу с какого-нибудь бесплатного источника]
