--- a/2floor.html
+++ b/2floor.html
@@ -19,6 +19,7 @@
   <li> Налево, в <a href="./SSYLKA.html">библиотеку</a>.</li>
   <li> Направо, в <a href="./SSYLKA.html">спорткомплекс</a>.</li>
   <li> Обратно, на <a href="./underneathpencil.html">лестницу</a>.</li>
+  <li> По тайному пути навстречу приключениям <a href="./taina.html">(по боковым летницам)</a>.</li>
 </ul>
 
 </body>
