Prepared logical places

--- a/over_gates.html
+++ b/over_gates.html
@@ -8,13 +8,15 @@
 
 <img src="./img/school-entrance.jpg"/>
     
-<p>Вы на внутренней територии школы. Слева от вас таинственный домик а за ним собачья будка.</p>
+<p>Вы на внутренней територии школы. Слева от вас таинственный домик а за ним <a href="./dog_house.html">собачья будка</a>.<br/>
+Справа <a href="./fir_tree.html">ёлочка</a> и мешки со строительным мусором.</p>
 
 <p>Вы можете пойти:</p>
 
 <ul>
-  <li> К <a href="./underneathpencil.html">подножию</a> карандаша </li>
-<li> В спорткомплекс </li>
+  <li> К <a href="./entrance.html">главной двери</a> или </li>
+  <li> В спорткомплекс, а еще </li>
+  <li> Назад <a href="./index.html">к воротам</a> </li>
 </ul>
   </body>
 </html>
