--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
   <li> К <a href="./deadend.html">метро и пивнушке</a>, долой учебу! </li>
 </ul>
 
+<script>
+localStorage.clear();
+</script>
+
 </body>
 </html>
