--- a/taina.html
+++ b/taina.html
@@ -14,7 +14,7 @@
   
 <H2> Вы еще можете  <a href="./2floor.html">вернуться</a> и прожить долгую, но скучную жизнь</H2>
 
-<p>Или пойти <a href="./5floor.html">дальше</a> и умереть героем</p>
+<p>Или пойти <a href="./lest45.html">дальше</a> и умереть героем</p>
 
 <p>Кстати под лестницей в закутке кто-то с кем-то решает физику (наверное) </p>
 
