--- a/lest45.html
+++ b/lest45.html
@@ -20,7 +20,7 @@
 <p>Но если хотите можно пойти <a href="./ploch5.html">дальше</a></p>
 
 <script>
-if (localStorage['tetrad'] != undefined) {
+if (localStorage['tetrad'] == undefined) {
     document.getElementById('net-tetr').style.display = 'block';
 } else {
     document.getElementById('est-tetr').style.display = 'block';
