--- a/taina.html
+++ b/taina.html
@@ -16,7 +16,7 @@
 
 <p>Или пойти <a href="./lest45.html">дальше</a> и умереть героем</p>
 
-<p>Кстати под лестницей в закутке кто-то с кем-то решает физику (наверное) </p>
+<p>Кстати под лестницей в закутке кто-то с кем-то решает <a href="./physe.html">физику</a> (наверное) </p>
 
 </body>
 </html>
