--- a/pushkin.html
+++ b/pushkin.html
@@ -1,5 +1,5 @@
-< html >
-  < голова >
+< h>tml
+  <he>da
     < meta  charset = " utf-8 " >
     < link  rel = " stylesheet " type = " text / css " href = " ./styles.css " >
   </ head >
