--- a/AnnaLos.html
+++ b/AnnaLos.html
@@ -15,7 +15,7 @@
 <p>Вы можете :</p>
 
 <ul>
-  <li> Выслушать лекцию и вернуться на<a href="./3floor.html">3 этаж</a></li>
+  <li> <a href="./AnnaLos_listened.html">Выслушать</a> лекцию и вернуться на<a href="./3floor.html">3 этаж</a></li>
   <li> Попасть туда, куда попадают все нехорошие дети[на реставрации]</li>
 </ul>
 
