--- a/physe.html
+++ b/physe.html
@@ -10,10 +10,10 @@
 <body>
 <H1>Закуток</H1>
 
-<p id="netr" class="secret wow">Вы наткнулись на отличника, разговаривающего со своим воображаемым другом. Посоветовавшись они (он?) решили отдать Вам тетрадку<br>
+<p id="net" class="secret wow">Вы наткнулись на отличника, разговаривающего со своим воображаемым другом. Посоветовавшись они (он?) решили отдать Вам тетрадку<br>
 Зачем? Ну ладно пригодится</p>
 
-<p id="est-tetr" class="secret wow">Вам показалось. Галлюцинации? Стоит показаться врачу...</p>
+<p id="est" class="secret wow">Вам показалось. Галлюцинации? Стоит показаться врачу...</p>
 
 <p>Ладно, стоит <a href="./taina.html">возвращаться</a></p>
 
