--- a/physe.html
+++ b/physe.html
@@ -15,7 +15,7 @@
 
 <p id="est" class="secret wow">Вам показалось. Галлюцинации? Стоит показаться врачу...</p>
 
-<p>Ладно, стоит <a href="./taina.html">возвращаться</a></p>
+<p>Стоит <a href="./taina.html">возвращаться</a></p>
 
 <script>
 if (localStorage['tetrad'] == undefined) {
