--- a/physe.html
+++ b/physe.html
@@ -24,5 +24,6 @@ if (localStorage['tetrad'] == undefined) {
 } else {
     document.getElementById('est').style.display = 'block';
 }
+ </script>
 </body>
 </html>
