--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 <H1>Ворота Школы</H1>
 
+<img src="./img/gates.jpg"/>
+
 <p>Вы стоите у ворот школы, слева от вас таинственный домик, позади грязная дорога и большие лужи.</p>
 
 <p>Вы можете пойти:</p>
