--- a/smert.html
+++ b/smert.html
@@ -5,16 +5,23 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="./styles.css">
+  <style type="text/css">
+   a {
+    text-decoration: none;
+     color: wnite; 
+   } 
+  </style>
 </head>
 
 <body>
+  
 <H1>Смерть</H1>
 
-<p>Говорили тебе, делай вовремя домашку, учись и станешь успешным человеком. Но нет.</p>
+<p>Говорили вам, делайте вовремя домашку, учитесь и станете успешным человеком. Но нет.</p>
 
-<H3>Прощай</H3>
+<H3>Прощайте</H3>
 
-<p>Если хочешь можешь начать новю жизнь (у котиков их девять, не отстовайте от них)</p>
+<p>Если хотите можете начать новю жизнь (у котиков их девять, не отставайте от них)</p>
 
 
 <p><a href="./index.html">░░░░░░░░░░░░░░░░░░░░░░░░▄▄█▀▀█▄░░░░░░░░░<br>
