--- a/smert.html
+++ b/smert.html
@@ -4,13 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="./styles.css">
-  <style type="text/css">
-   a {
-    text-decoration: none;
-     color: wnite; 
-   } 
-  </style>
+  <link rel="stylesheet" type="text/css">
 </head>
 
 <body>
