--- a/smert.html
+++ b/smert.html
@@ -4,9 +4,8 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
-
 <body>
   
 <H1>Смерть</H1>
